[#227] Add test for loading data from HTTP